k8s/streaming/ingress/ingress-debezium.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-ingress
spec:
  rules:
    - host: kafka-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8087
    - host: debezium-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: debezium-ui
                port:
                  number: 8095
